丢弃new BASE64Encoder的使用与Andorid端的加密效果不一致 采用Base64.getEncoder加密